--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="calculator">
         <div class="display">
-            <p class="display-numbers"></p>
+            <p class="display-numbers">(3 + 2) * 2 + (7 - 5) / 2</p>
         </div>
 
         <div class="keys-container">
