--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" defer></script>
+    <link rel="stylesheet" id="switcher-id" href="">
 </head>
 <body>
+    <div class="theme-switches">
+
+        <div data-theme="light" class="switch" id="switch-1"></div>
+        <div data-theme="dark" class="switch" id="switch-2"></div>
+        <div data-theme="pink" class="switch" id="switch-3"></div>
+
+    </div>
+
     <div class="calculator">
+        <div class="display-box"></div>
         <div class="display">
             <p class="display-numbers"></p>
         </div>
