add squares theme

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         <div data-theme="light" class="switch" id="switch-1"></div>
         <div data-theme="dark" class="switch" id="switch-2"></div>
         <div data-theme="pink" class="switch" id="switch-3"></div>
+        <div data-theme="square" class="switch square" id="switch-4"></div>
+
 
     </div>
 
     <div class="calculator">
-        <div class="display-box"></div>
+        <div class="display-box">
+            <p class="display-operation"></p>
+        </div>
         <div class="display">
             <p class="display-numbers"></p>
         </div>
